; ModuleID = '/home/carl/AnghaBench/ish/kernel/extr_task.c_task_run.c'
source_filename = "/home/carl/AnghaBench/ish/kernel/extr_task.c_task_run.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@current = common dso_local global %struct.TYPE_2__* null, align 8
@.str = private unnamed_addr constant [18 x i8] c"task_run returned\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*)* @task_run to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @task_run(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %4 = load i8*, i8** %3, align 8
  %5 = bitcast i8* %4 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %5, %struct.TYPE_2__** @current, align 8
  br i1 true, label %6, label %8

6:                                                ; preds = %1
  %7 = call i32 (...) @task_run_hook()
  br label %12

8:                                                ; preds = %1
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** @current, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = call i32 @cpu_run(i32* %10)
  br label %12

12:                                               ; preds = %8, %6
  %13 = call i32 @die(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0))
  %14 = load i8*, i8** %2, align 8
  ret i8* %14
}

declare dso_local i32 @task_run_hook(...) #1

declare dso_local i32 @cpu_run(i32*) #1

declare dso_local i32 @die(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
